[package]
name = "quickreplace"
version = "0.1.0"
edition = "2018"
description = "making a basic command-line tool, reading/writing files, string/text manipulation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text-colorizer = "1"    # no minor and patch versions means "get newest available before 2.0"
regex = "1"